little change in registration page

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -42,12 +42,6 @@
 
         <br>
 
-        <label for="inputMobile"> Country Code and Mobile number <span style="color:red;">*</span></label>
-
-        <input type="number">
-
-        <br><br>
-
         <label for="input-email">Email Address:</label>
         <input type="email" placeholder="Email address">
 
@@ -72,6 +66,16 @@
                 <i class="fa fa-eye-slash" aria-hidden="true"></i>
             </div>
         </div>
+
+        <br>
+
+        <div style="display: flex;justify-content: space-between;">
+            <label for="inputMobile"> Country Code and Mobile number <span style="color:red;">*</span></label>
+            <div>
+                <input type="checkbox"><label for="">Same as WhatsApp No?</label>
+            </div>
+        </div>
+        <input type="number">
 
         <br><br>
 
