KG-Feat-EmailActivity Ui/others TAB Total Count

--- a/src/app/pages/email-tracker/email-tracker.component.html
+++ b/src/app/pages/email-tracker/email-tracker.component.html
@@ -1,1 +1,116 @@
-<p>email-tracker works!</p>
+<div class="card flex justify-content-center">
+    <p-card header="Email Activity Tracker">
+        <div class="card ">
+            <p-tabView>
+                <p-tabPanel header="Email Activity">  
+                    <div class="card">
+                    <p-table
+                    #dt1 
+                    dataKey="id" 
+                    [showCurrentPageReport]="true" 
+                    [tableStyle]="{ 'min-width': '75rem' }"
+                    >
+                    <ng-template pTemplate="caption"> 
+                         <div class="row">
+                            <div class="col-md-4 pt-2" style="width:32%">
+                                <div class="card flex flex-wrap justify-content-center">
+                                <span class="p-input-icon-left">
+                                  <i class="pi pi-search" style="color: rgb(243, 191, 24);"></i> 
+                                  <input  class="p-inputtext-sm" pInputText type="text"    placeholder="Search Keywords" #globalSearch  style="width: 100%;"/> 
+                                </span> 
+                              </div>
+                              </div>
+                              <div class="col-md-2">
+                                <button pButton label="Clear"   style="color: rgb(243, 191, 24)" class="p-button-outlined" 
+                                icon="pi pi-filter-slash"  ></button> 
+                              </div>
+                         </div>
+                        <p class="pt-2">Total Student Count :  </p>
+                      </ng-template> 
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th style="width:10%">Email ID</th>
+                            <th style="width:10%">Subject</th>
+                            <th style="width:10%">Status</th>
+                            <th style="width:10%">Opens Count</th> 
+                            <th style="width:10%">Clicks Count</th> 
+                        </tr>
+                      </ng-template> 
+                    <ng-template pTemplate="body"> 
+                        <tr>
+                            <td>  </td>
+                            <td>  </td>
+                            <td>  </td>
+                            <td>  </td>
+                            <td>  </td>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="emptymessage">
+                      No Data Found.
+                    </ng-template> 
+                </p-table>
+        <p-paginator [first]="first" [rows]="rows" [totalRecords]="100" ></p-paginator>
+            </div>
+                </p-tabPanel>
+                <p-tabPanel header="Attested Email"> 
+                  <p-tabView>
+                    <p-tabPanel header="All Attested Mails">
+                        <div class="card">
+                            <p-table
+                            #dt1 
+                            dataKey="id" 
+                            [showCurrentPageReport]="true" 
+                            [tableStyle]="{ 'min-width': '75rem' }"
+                            >
+                            <ng-template pTemplate="caption"> 
+                                 <div class="row">
+                                    <div class="col-md-4 pt-2" style="width:32%">
+                                        <div class="card flex flex-wrap justify-content-center">
+                                        <span class="p-input-icon-left">
+                                          <i class="pi pi-search" style="color: rgb(243, 191, 24);"></i> 
+                                          <input  class="p-inputtext-sm" pInputText type="text"    placeholder="Search Keywords" #globalSearch  style="width: 100%;"/> 
+                                        </span> 
+                                      </div>
+                                      </div>
+                                      <div class="col-md-2">
+                                        <button pButton label="Clear"   style="color: rgb(243, 191, 24)" class="p-button-outlined" 
+                                        icon="pi pi-filter-slash"  ></button> 
+                                      </div>
+                                 </div>
+                                <p class="pt-2">Total Student Count :  </p>
+                              </ng-template> 
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th style="width:10%">Contact Person</th>
+                                    <th style="width:10%">University Name</th>
+                                    <th style="width:10%">Email</th>
+                                    <th style="width:10%">Contact</th>  
+                                </tr>
+                              </ng-template> 
+                            <ng-template pTemplate="body"> 
+                                <tr>
+                                    <td>  </td>
+                                    <td>  </td>
+                                    <td>  </td>
+                                    <td>  </td> 
+                                </tr>
+                            </ng-template>
+                            <ng-template pTemplate="emptymessage">
+                              No Data Found.
+                            </ng-template> 
+                        </p-table>
+                <p-paginator [first]="first" [rows]="rows" [totalRecords]="100" ></p-paginator>
+                    </div>
+                    </p-tabPanel>
+
+                    <p-tabPanel header="Unopened 15 Days Mails">
+                    </p-tabPanel> 
+                        
+                    <p-tabPanel header="Unopened 30 Days Mails">
+                    </p-tabPanel>
+                  </p-tabView>
+                </p-tabPanel> 
+            </p-tabView>
+        </div>
+    </p-card>
+</div>
