--- a/src/app/pages/emailed-applications/emailed-applications.component.html
+++ b/src/app/pages/emailed-applications/emailed-applications.component.html
@@ -5,6 +5,7 @@
         <p-table
         #dt1
         dataKey="id" 
+        [value]="emailedApplication"
         [showCurrentPageReport]="true"  
         [tableStyle]="{ 'min-width': '75rem' }"
             >
@@ -37,21 +38,22 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-2 pt-2">
-                    <span class="p-input-icon-left">
-                      <i class="pi pi-search" style="color: rgb(243, 191, 24)"></i> 
-                      <input pInputText type="text" [(ngModel)]="filterText" (input)="filterData()" placeholder="Search Keywords" #globalSearch/> 
-                    </span>
+                  <div class="col-md-1 pt-2">
+                  <p-button label="search" (click)="search(id.value,name.value,email.value)" styleClass="p-button-warning" ></p-button>
                   </div>
-                  <div class="col-md-8 pt-2">
-                     <p-button label="search" (click)="search(id.value,name.value,email.value)" styleClass="p-button-warning" ></p-button>
-                  </div>
-                  <div class="col-md-2 pt-2" >
+                  <div class="col-md-1 pt-2" >
                     <button pButton label="Clear" (click)="clear()" style="color: rgb(243, 191, 24)" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
                 </div>
-               
+                  <div class="col-md-4 pt-2" style="width:32%">
+                    <div class="card flex flex-wrap justify-content-center">
+                    <span class="p-input-icon-left">
+                      <i class="pi pi-search" style="color: rgb(243, 191, 24);"></i> 
+                      <input  class="p-inputtext-sm" pInputText type="text"  [(ngModel)]="filterText" (input)="filterData()" placeholder="Search Keywords" #globalSearch  style="width: 100%;"/> 
+                    </span> 
+                  </div>
+                  </div>
                 </div> 
-                <!-- <p>Total Student Count : {{this.totalCount}}</p> -->
+                <p>Total Student Count : {{this.totalCount}}</p>
               </ng-template> 
                
             <ng-template pTemplate="header">
@@ -64,22 +66,44 @@
                     <th style="width:10%">Application Date</th>
                     <th style="width:10%">Approved By</th> 
                     <th style="width:10%">Email Sent On</th> 
-                    <th style="width:10%">Email Status</th>  
-                    <th style="width:5%">Action</th> 
+                    <th style="width:8%">Email Status</th>  
+                    <th style="width:15%">Action</th> 
                 </tr> 
             </ng-template>
-            <ng-template pTemplate="body" >
-                <tr>
-                    <td>aaa</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+            <ng-template pTemplate="body" let-emailedData >
+                <tr [pSelectableRow]="emailedData">
+                    <td>{{emailedData.id}}</td>
+                    <td>{{emailedData.name}}</td>
+                    <td>{{emailedData.email}}</td>
+                    <td> 
+                      {{emailedData?.instructionalField == true ? 'Instructional Details,' : ''}}
+                      {{emailedData?.curriculum == true ? 'Curriculum,' : ''}}
+                      {{emailedData?.educationalDetails == true ? 'Educational Details,' : ''}} 
+                      {{emailedData?.gradToPer == true ? ',Grade To Percentage Letter,' : ''}} 
+                      {{emailedData?.affiliation == true ? ',Affiliation Letter,' : ''}} 
+                      {{emailedData?.CompetencyLetter == true ? 'Competency Letter,' : ''}} 
+                      {{emailedData?.Letterfor_NameChange == true ? 'LetterforNameChange' : ''}}  
+                    </td>
+                    <td>{{emailedData.type}}</td>
+                    <td>{{emailedData.application_date}}</td>
+                    <td>{{emailedData.approved_by}}</td>
+                    <td>{{emailedData.updated_at}}</td>
+                    <td>{{emailedData.email_status}}</td>
+                    <td>
+                      <span class="pi pi-user" pTooltip="View More" tooltipPosition="top" 
+                      (click)="viewMore(emailedData.user_id,emailedData.id)"></span> 
+
+                      <span class="pi pi-envelope" (click)="sendEmail()" pTooltip="Send Email" tooltipPosition="top" ></span> 
+
+                      <span class="pi pi-book" *ngIf="emailedData.notes != null" pTooltip="View Notes" tooltipPosition="top" 
+                      (click)="showNotes(emailedData.notes,emailedData.id,emailedData.user_id,emailedData.collegeConfirmation)"></span>
+
+                      <span class="pi pi-refresh" (click)="resendApplication(emailedData.user_id,emailedData.id,emailedData.name)" 
+                      pTooltip="Resend" tooltipPosition="top" ></span>
+
+                      <p-tag icon="pi pi-check" severity="success" pTooltip="Merge File" tooltipPosition="top" 
+                       value="Merge File" (click)="mergeFile()"></p-tag> 
+                    </td>
                 </tr>
             </ng-template>
             <ng-template pTemplate="emptymessage">
@@ -88,6 +112,9 @@
                 </tr>
             </ng-template>
         </p-table>
+        <p-paginator (onPageChange)="onPageChange($event)" [first]="first" [rows]="rows" [totalRecords]="totalCount" ></p-paginator>
     </div>
     </p-card>
+    <p-toast></p-toast>
+<p-confirmDialog [style]="{width: '25vw'}"></p-confirmDialog>
 </div>
