added new rediobutton

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -24,22 +24,16 @@
         <label for="input-name">Gender:</label>
 
         <div class="container">
-            <div class="radio">
-                <input id="radio-1" name="redio" type="radio">
-                <label for="radio-1" class="radio-label">Male</label>
-            </div>
-
-            <div class="radio">
-                <input id="radio-2" name="redio" type="radio">
-                <label for="radio-2" class="radio-label">Female</label>
-            </div>
-
-            <div class="radio">
-                <input id="radio-3" name="redio" type="radio">
-                <label for="radio-3" class="radio-label">Others</label>
-            </div>
+            <input class="ra" type="radio" id="radio-1" name="group" />
+            <label class="radio" for="radio-1"></label>
+            <label class="lb" for="radio-1">Male</label>
+            <input class="ra" type="radio" id="radio-2" name="group" />
+            <label class="radio" for="radio-2"></label>
+            <label class="lb" for="radio-2">Female</label>
+            <input class="ra" type="radio" id="radio-3" name="group" />
+            <label class="radio" for="radio-3"></label>
+            <label class="lb" for="radio-3">Others</label>
         </div>
-
         <br>
 
         <label for="input-email">Email Address:</label>
