--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -23,7 +23,7 @@
 
         <label for="input-name">Gender:</label>
 
-        <div class="container">
+        <div class="radiobtn">
             <input class="ra" type="radio" id="radio-1" name="group" />
             <label class="radio" for="radio-1"></label>
             <label class="lb" for="radio-1">Male</label>
